--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "telegram": "^1.9.3",
     "typescript": "^4.4.3",
     "ytdl-core": "^4.9.1"
+  },
+  "engines": {
+    "node": ">16.8"
   }
 }
