--- a/app.json
+++ b/app.json
@@ -22,6 +22,10 @@
     "worker": {
       "quantity": 1,
       "size": "free"
+    },
+    "web": {
+      "quantity": 0,
+      "size": "free"
     }
   },
   "buildpacks": [
