--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gram-tgcalls": "git+https://github.com/codehz/gram-tgcalls.git",
     "node-pre-gyp": "^0.17.0",
     "telegram": "^1.9.3",
+    "tgcalls": "^1.0.1",
     "typescript": "^4.4.3",
     "ytdl-core": "^4.9.1"
   },
